<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cccccc"
        tools:context=".activity.Login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logo_layout"
            android:background="@drawable/squircle_bottom_rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:fontFamily="@font/poppins_medium_ttf"
                android:id="@+id/logo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red_main"
                android:padding="@dimen/_2sdp"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/socialx_logo_text"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_text">

                <Button
                    android:text="Login"
                    android:background="@drawable/button_bg_bottomrounded"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins_ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/signUpBtn"
                    android:text="Sign Up"
                    android:background="@android:color/transparent"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins_ttf"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/squircle"
            android:padding="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/logo_layout"
            app:layout_constraintBottom_toTopOf="@id/login_btn">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_to_your_account"
                android:fontFamily="@font/poppins_semibold_ttf"
                android:textColor="@color/red_main"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout

                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:fontFamily="@font/poppins_ttf"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/email"
                    android:hint="johndoe@example.com"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_ttf"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/email_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:fontFamily="@font/poppins_ttf"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/lock"
                    android:hint="********"
                    android:fontFamily="@font/poppins_ttf"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="22sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red_main"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_layout" />

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/google_login_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_password"
                android:orientation="horizontal">
            <ImageView
                android:id="@+id/google_icon"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_icon"/>
            <ImageView
                android:layout_margin="@dimen/_10sdp"
                android:id="@+id/facebook_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon"/>


            </LinearLayout>

            <TextView
                android:id="@+id/dont_have_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_ttf"
                android:text="@string/don_t_have_an_account_register_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/google_login_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:textSize="20sp"
            android:text="Login"
            android:fontFamily="@font/poppins_semibold_ttf"
            android:background="@drawable/button_bg_toprounded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>