<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc"
    tools:context=".activity.Signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_layout"
        android:background="@drawable/squircle_bottom_rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_main"
            android:padding="@dimen/_2sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/socialx_logo_text"
            android:fontFamily="@font/poppins_medium_ttf"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_text">

            <Button
                android:id="@+id/login_int_btn"
                android:text="Login"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:text="Sign Up"
                android:background="@drawable/button_bg_bottomrounded"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/squircle"
        android:padding="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/logo_layout"
        app:layout_constraintBottom_toTopOf="@id/register_btn">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:fontFamily="@font/poppins_medium_ttf"
            android:textColor="@color/red_main"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView

                android:fontFamily="@font/poppins_ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signup_name"
                android:fontFamily="@font/poppins_ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/person"
                android:hint="John Doe"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/name_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_ttf" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/email"
                android:hint="johndoe@example.com"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_ttf" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/email_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact No"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_ttf" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/signup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/phone"
                    android:hint="9876543210"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:fontFamily="@font/poppins_ttf" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/phone_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_ttf" />

            <EditText
                android:id="@+id/signup_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/lock"
                android:hint="********"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_ttf" />


        </LinearLayout>

        <CheckBox
            android:id="@+id/terms_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/i_agree_to_terms_and_conditions"
            android:buttonTint="@color/red_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_layout"
            android:fontFamily="@font/poppins_ttf" />

        <TextView android:id="@+id/already_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/poppins_ttf"
            app:layout_constraintTop_toBottomOf="@+id/terms_checkbox"
            android:text="@string/already_have_an_account_sign_in"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button

        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:textSize="20sp"
        android:text="Register"
        android:background="@drawable/button_bg_toprounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_medium_ttf" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>